log

Thu 14 Mar 2024 05:19:05 PM UTC: 
 exercises.c | 72 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++-----
 1 file changed, 67 insertions(+), 5 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘inicializarLibro’:
exercises.c:116:12: error: ‘libro’ redeclared as different kind of symbol
  116 |     Libro *libro = (Libro *)malloc(sizeof(Libro));
      |            ^~~~~
exercises.c:113:30: note: previous definition of ‘libro’ with type ‘Libro *’
  113 | void inicializarLibro(Libro *libro, const char *titulo, const char *nombreAutor,
      |                       ~~~~~~~^~~~~
exercises.c:123:20: error: incompatible types when assigning to type ‘Autor’ from type ‘Autor *’
  123 |     libro->autor = (Autor *)malloc(sizeof(Autor));
      |                    ^
exercises.c:125:22: error: invalid operands to binary == (have ‘Autor’ and ‘void *’)
  125 |     if (libro->autor == NULL) exit(EXIT_FAILURE);
      |         ~~~~~~~~~~~~ ^~
      |              |
      |              Autor
exercises.c:127:24: error: invalid type argument of ‘->’ (have ‘Autor’)
  127 |     strcpy(libro->autor->nombre, nombreAutor);
      |                        ^~
exercises.c:128:12: error: ‘Libro’ has no member named ‘Autor’; did you mean ‘autor’?
  128 |     libro->Autor->anioNacimiento = anioNacimiento;
      |            ^~~~~
      |            autor
Compilation failed
ce4c72c
Thu 14 Mar 2024 05:20:17 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘inicializarLibro’:
exercises.c:116:11: error: ‘libro’ redeclared as different kind of symbol
  116 |     Libro libro = (Libro *)malloc(sizeof(Libro));
      |           ^~~~~
exercises.c:113:30: note: previous definition of ‘libro’ with type ‘Libro *’
  113 | void inicializarLibro(Libro *libro, const char *titulo, const char *nombreAutor,
      |                       ~~~~~~~^~~~~
exercises.c:116:19: error: invalid initializer
  116 |     Libro libro = (Libro *)malloc(sizeof(Libro));
      |                   ^
exercises.c:118:15: error: invalid operands to binary == (have ‘Libro’ and ‘void *’)
  118 |     if (libro == NULL) exit(EXIT_FAILURE);
      |               ^~
exercises.c:120:17: error: invalid type argument of ‘->’ (have ‘Libro’)
  120 |     strcpy(libro->titulo, titulo);
      |                 ^~
exercises.c:121:10: error: invalid type argument of ‘->’ (have ‘Libro’)
  121 |     libro->anioPublicacion = anioPublicacion;
      |          ^~
exercises.c:123:10: error: invalid type argument of ‘->’ (have ‘Libro’)
  123 |     libro->autor = (Autor *)malloc(sizeof(Autor));
      |          ^~
exercises.c:125:14: error: invalid type argument of ‘->’ (have ‘Libro’)
  125 |     if (libro->autor == NULL) exit(EXIT_FAILURE);
      |              ^~
exercises.c:127:17: error: invalid type argument of ‘->’ (have ‘Libro’)
  127 |     strcpy(libro->autor->nombre, nombreAutor);
      |                 ^~
exercises.c:128:10: error: invalid type argument of ‘->’ (have ‘Libro’)
  128 |     libro->Autor->anioNacimiento = anioNacimiento;
      |          ^~
Compilation failed
13c12dd
Thu 14 Mar 2024 05:21:06 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘inicializarLibro’:
exercises.c:116:13: error: ‘libro’ redeclared as different kind of symbol
  116 |     Libro (*libro) = (Libro *)malloc(sizeof(Libro));
      |             ^~~~~
exercises.c:113:30: note: previous definition of ‘libro’ with type ‘Libro *’
  113 | void inicializarLibro(Libro *libro, const char *titulo, const char *nombreAutor,
      |                       ~~~~~~~^~~~~
exercises.c:123:20: error: incompatible types when assigning to type ‘Autor’ from type ‘Autor *’
  123 |     libro->autor = (Autor *)malloc(sizeof(Autor));
      |                    ^
exercises.c:125:22: error: invalid operands to binary == (have ‘Autor’ and ‘void *’)
  125 |     if (libro->autor == NULL) exit(EXIT_FAILURE);
      |         ~~~~~~~~~~~~ ^~
      |              |
      |              Autor
exercises.c:127:24: error: invalid type argument of ‘->’ (have ‘Autor’)
  127 |     strcpy(libro->autor->nombre, nombreAutor);
      |                        ^~
exercises.c:128:12: error: ‘Libro’ has no member named ‘Autor’; did you mean ‘autor’?
  128 |     libro->Autor->anioNacimiento = anioNacimiento;
      |            ^~~~~
      |            autor
Compilation failed
c5a2dfc
Thu 14 Mar 2024 05:22:18 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘inicializarLibro’:
exercises.c:116:14: error: incompatible types when assigning to type ‘Libro’ from type ‘Libro *’
  116 |     *libro = (Libro *)malloc(sizeof(Libro));
      |              ^
exercises.c:123:20: error: incompatible types when assigning to type ‘Autor’ from type ‘Autor *’
  123 |     libro->autor = (Autor *)malloc(sizeof(Autor));
      |                    ^
exercises.c:125:22: error: invalid operands to binary == (have ‘Autor’ and ‘void *’)
  125 |     if (libro->autor == NULL) exit(EXIT_FAILURE);
      |         ~~~~~~~~~~~~ ^~
      |              |
      |              Autor
exercises.c:127:24: error: invalid type argument of ‘->’ (have ‘Autor’)
  127 |     strcpy(libro->autor->nombre, nombreAutor);
      |                        ^~
exercises.c:128:12: error: ‘Libro’ has no member named ‘Autor’; did you mean ‘autor’?
  128 |     libro->Autor->anioNacimiento = anioNacimiento;
      |            ^~~~~
      |            autor
Compilation failed
262d768
Thu 14 Mar 2024 05:24:32 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘inicializarLibro’:
exercises.c:116:12: error: ‘libro’ redeclared as different kind of symbol
  116 |     Libro* libro = (Libro *)malloc(sizeof(Libro));
      |            ^~~~~
exercises.c:113:30: note: previous definition of ‘libro’ with type ‘Libro *’
  113 | void inicializarLibro(Libro *libro, const char *titulo, const char *nombreAutor,
      |                       ~~~~~~~^~~~~
exercises.c:123:20: error: incompatible types when assigning to type ‘Autor’ from type ‘Autor *’
  123 |     libro->autor = (Autor *)malloc(sizeof(Autor));
      |                    ^
exercises.c:125:22: error: invalid operands to binary == (have ‘Autor’ and ‘void *’)
  125 |     if (libro->autor == NULL) exit(EXIT_FAILURE);
      |         ~~~~~~~~~~~~ ^~
      |              |
      |              Autor
exercises.c:127:24: error: invalid type argument of ‘->’ (have ‘Autor’)
  127 |     strcpy(libro->autor->nombre, nombreAutor);
      |                        ^~
exercises.c:128:12: error: ‘Libro’ has no member named ‘Autor’; did you mean ‘autor’?
  128 |     libro->Autor->anioNacimiento = anioNacimiento;
      |            ^~~~~
      |            autor
Compilation failed
631e5b1
Thu 14 Mar 2024 05:24:55 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘inicializarLibro’:
exercises.c:123:20: error: incompatible types when assigning to type ‘Autor’ from type ‘Autor *’
  123 |     libro->autor = (Autor *)malloc(sizeof(Autor));
      |                    ^
exercises.c:125:22: error: invalid operands to binary == (have ‘Autor’ and ‘void *’)
  125 |     if (libro->autor == NULL) exit(EXIT_FAILURE);
      |         ~~~~~~~~~~~~ ^~
      |              |
      |              Autor
exercises.c:127:24: error: invalid type argument of ‘->’ (have ‘Autor’)
  127 |     strcpy(libro->autor->nombre, nombreAutor);
      |                        ^~
exercises.c:128:12: error: ‘Libro’ has no member named ‘Autor’; did you mean ‘autor’?
  128 |     libro->Autor->anioNacimiento = anioNacimiento;
      |            ^~~~~
      |            autor
Compilation failed
34ffb54
Thu 14 Mar 2024 05:26:24 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘inicializarLibro’:
exercises.c:123:20: error: incompatible types when assigning to type ‘Autor’ from type ‘Autor *’
  123 |     libro->autor = (Autor *)malloc(sizeof(Autor));
      |                    ^
exercises.c:127:24: error: invalid type argument of ‘->’ (have ‘Autor’)
  127 |     strcpy(libro->autor->nombre, nombreAutor);
      |                        ^~
exercises.c:128:17: error: invalid type argument of ‘->’ (have ‘Autor’)
  128 |     libro->autor->anioNacimiento = anioNacimiento;
      |                 ^~
Compilation failed
2d74acc
Thu 14 Mar 2024 05:27:21 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘inicializarLibro’:
exercises.c:123:20: error: incompatible types when assigning to type ‘Autor’ from type ‘Autor *’
  123 |     libro->autor = (Autor *)malloc(sizeof(Autor));
      |                    ^
exercises.c:127:19: error: ‘Libro’ has no member named ‘Autor’; did you mean ‘autor’?
  127 |     strcpy(libro->Autor->nombre, nombreAutor);
      |                   ^~~~~
      |                   autor
exercises.c:128:12: error: ‘Libro’ has no member named ‘Autor’; did you mean ‘autor’?
  128 |     libro->Autor->anioNacimiento = anioNacimiento;
      |            ^~~~~
      |            autor
Compilation failed
c18d5a9
